improve showing usage and help messages

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -6,9 +6,12 @@ e.badOption=bad option: "{0}" in {1}
 i.notFound=not found
 i.showCondition=find with patterns:{0} and options:{1}
 i.usagePrefix=usage:
-i.usage=potf [ patterns | options ]
+i.usage=potf [patterns] [.extension1[,extension2[...]]]
 i.usageInLoop=options | : control
 i.verboseEndMessage=matched {0} in {1} files, elapsed time: {2,number,#.##} secs
+
+help.header=options:
+help.footer=
 
 opt.all=find all (even if no patterns and no options)
 opt.atime=find by atime (range)
