--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -5,6 +5,9 @@ i.showCondition=\u691c\u7d22\u6761\u4ef6: {0}\n\u51e6\u7406\u30aa\u30d7\u30b7\u3
 i.usagePrefix=\u4f7f\u3044\u65b9:
 i.verboseEndMessage=\u7d42\u4e86. {1} \u4e2d {0} \u30d5\u30a1\u30a4\u30eb\u304c\u4e00\u81f4, \u5b9f\u884c\u6642\u9593 {2,number,#.##} \u79d2
 
+help.header=\u30aa\u30d7\u30b7\u30e7\u30f3:
+help.footer=
+
 opt.all=\u5168\u3066\u3092\u691c\u7d22\uff08\u30d1\u30bf\u30fc\u30f3\u3068\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u7121\u304f\u3066\u3082\uff09
 opt.atime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a
 opt.ctime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
