impl dir option

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -2,6 +2,10 @@
 
 e.0=error: {0}
 e.badOption=bad option: "{0}" in {1}
+e.noSuchDir=no such directory: {0}
+
+w.0=warning: {0}
+w.duplicatedir=warning: duplicate directory: {0}
 
 i.notFound=not found
 i.showCondition=find with patterns:{0} and options:{1}
@@ -16,6 +20,7 @@ help.footer=
 opt.all=find all (even if no patterns and no options)
 opt.atime=find by atime (range)
 opt.ctime=find by ctime (range)
+opt.dir=directories
 opt.depth=max depth
 opt.exclude=pattern to exclude
 opt.exts=show set of extensions
