--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -1,4 +1,8 @@
 e.0=\u30a8\u30e9\u30fc: {0}
+e.noSuchDir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc [{0}] \u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093
+
+w.0=\u8b66\u544a: {0}
+w.duplicatedir=\u8b66\u544a: \u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc[{0}]\u306f\u91cd\u8907\u3057\u3066\u3044\u307e\u3059
 
 i.notFound=\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
 i.showCondition=\u691c\u7d22\u6761\u4ef6: {0}\n\u51e6\u7406\u30aa\u30d7\u30b7\u30e7\u30f3: {1}
