impl text option (experimental)

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -43,5 +43,6 @@ opt.sort=sort by the specified field
 opt.state=start with state-mode on
 opt.tail=shows last n paths
 opt.tails=shows last 10 paths
+opt.text=detect text file (experimental)
 opt.verbose=verbose messages
 opt.version=show version
