--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -37,5 +37,6 @@ opt.sort=\u6307\u5b9a\u3057\u305f\u30ad\u30fc\u3067\u30bd\u30fc\u30c8
 opt.state=\u72b6\u614b\u30e2\u30fc\u30c9\u6709\u52b9\u3067\u8d77\u52d5
 opt.tail=\u672b\u5c3e\u306en\u4ef6\u3092\u8868\u793a
 opt.tails=\u672b\u5c3e\u306e10\u4ef6\u3092\u8868\u793a
+opt.text=\u30c6\u30ad\u30b9\u30c8\u30d5\u30a1\u30a4\u30eb\u691c\u51fa (\u5b9f\u9a13\u7684)
 opt.verbose=\u8a73\u7d30\u306e\u30e1\u30c3\u30bb\u30fc\u30b8\u3092\u51fa\u529b
 opt.version=\u30d0\u30fc\u30b8\u30e7\u30f3\u3092\u51fa\u529b
