--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -13,8 +13,8 @@ help.header=\u30aa\u30d7\u30b7\u30e7\u30f3:
 help.footer=
 
 opt.all=\u5168\u3066\u3092\u691c\u7d22\uff08\u30d1\u30bf\u30fc\u30f3\u3068\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u7121\u304f\u3066\u3082\uff09
-opt.atime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a
-opt.ctime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
+opt.atime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
+opt.ctime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a
 opt.depth=\u6700\u5927\u6df1\u5ea6\u3092\u6307\u5b9a
 opt.exclude=\u9664\u5916\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a
 opt.exts=\u62e1\u5f35\u5b50\u30bb\u30c3\u30c8\u3092\u51fa\u529b
