Change the behavior of options required a integer argument (must positive integer)

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -3,6 +3,7 @@
 e.0=error: {0}
 e.badOption=bad option: "{0}" in {1}
 e.noSuchDir=no such directory: {0}
+e.argOptionMustPositiveNumber=the argument for option "{0}" must be a positive integer but "{1}" was given
 
 w.0=warning: {0}
 w.duplicatedir=warning: duplicate directory: {0}
