--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -1,5 +1,6 @@
 e.0=\u30a8\u30e9\u30fc: {0}
 e.noSuchDir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc [{0}] \u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093
+e.argOptionMustPositiveNumber=\u30aa\u30d7\u30b7\u30e7\u30f3 "{0}" \u306e\u5f15\u6570\u306b\u306f\u6b63\u306e\u6574\u6570\u3092\u6307\u5b9a\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059 "{1}" \u304c\u6307\u5b9a\u3055\u308c\u307e\u3057\u305f
 
 w.0=\u8b66\u544a: {0}
 w.duplicatedir=\u8b66\u544a: \u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc[{0}]\u306f\u91cd\u8907\u3057\u3066\u3044\u307e\u3059
