Add the beginning message of the interactive mode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -10,6 +10,9 @@ w.duplicatedir=warning: duplicate directory: {0}
 
 i.notFound=not found
 i.showCondition=find with patterns:{0} and options:{1}
+i.startInteractiveMode=\
+\  This is the interactive mode.\n\
+\  Input ":help" to show the command list.\n
 i.usagePrefix=usage:
 i.usage=potf [patterns] [.extension1[,extension2[...]]]
 i.usageInLoop=options | : control
