Add help command in the interactive mode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -20,6 +20,17 @@ i.verboseEndMessage=matched {0} in {1} files, elapsed time: {2,number,#.##} secs
 
 help.header=options:
 help.footer=
+help.interactive=\
+:drop n     Drop results from the beginning of this list\n\
+:label i s  Label a result by text\n\
+:merge a b  Merge two results\n\
+:pick i     Pick a result and add it first\n\
+:print/:p   Print the summary of results\n\
+:sort       Sort the current result and add it first\n\
+\n\
+:cls        Clear screen\n\
+:help       Show help\n\
+:exit/:quit Quit application
 
 opt.all=find all (even if no patterns and no options)
 opt.atime=find by atime (range)
