--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -15,6 +15,17 @@ i.verboseEndMessage=\u7d42\u4e86. {1} \u4e2d {0} \u30d5\u30a1\u30a4\u30eb\u304c\
 
 help.header=\u30aa\u30d7\u30b7\u30e7\u30f3:
 help.footer=
+help.interactive=\
+:drop n     \u7d50\u679c\u30ea\u30b9\u30c8\u306e\u5148\u982d\u304b\u3089\u6307\u5b9a\u3057\u305f\u500b\u6570\u3092\u524a\u9664\n\
+:label i s  \u7d50\u679c\u306b\u540d\u524d\u3092\u4ed8\u3051\u308b\n\
+:merge a b  2\u3064\u306e\u7d50\u679c\u3092\u30de\u30fc\u30b8\u3059\u308b\n\
+:pick i     \u7d50\u679c\u3092\u53d6\u308a\u51fa\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
+:print/:p   \u7d50\u679c\u306e\u8981\u7d04\u3092\u8868\u793a\n\
+:sort       \u73fe\u5728\u306e\u7d50\u679c\u3092\u30bd\u30fc\u30c8\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
+\n\
+:cls        \u30b9\u30af\u30ea\u30fc\u30f3\u306e\u30af\u30ea\u30a2\n\
+:help       \u30d8\u30eb\u30d7\u3092\u8868\u793a\n\
+:exit/:quit \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u7d42\u4e86
 
 opt.all=\u5168\u3066\u3092\u691c\u7d22\uff08\u30d1\u30bf\u30fc\u30f3\u3068\u30aa\u30d7\u30b7\u30e7\u30f3\u304c\u7121\u304f\u3066\u3082\uff09
 opt.atime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
