--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -7,7 +7,7 @@ w.duplicatedir=\u8b66\u544a: \u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc[{0}]\u30
 
 i.notFound=\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
 i.showCondition=\u691c\u7d22\u6761\u4ef6: {0}\n\u51e6\u7406\u30aa\u30d7\u30b7\u30e7\u30f3: {1}
-xi.startInteractiveMode=\
+i.startInteractiveMode=\
 \  \u5bfe\u8a71\u30e2\u30fc\u30c9\u3092\u958b\u59cb\u3057\u307e\u3059\u3002\n\
 \  ":help"\u3092\u5165\u529b\u3059\u308b\u3068\u30b3\u30de\u30f3\u30c9\u30ea\u30b9\u30c8\u3092\u8868\u793a\u3057\u307e\u3059\u3002\n
 i.usagePrefix=\u4f7f\u3044\u65b9:
