Rename the "state" option to "interactive"

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -44,6 +44,7 @@ opt.grep=grep file content
 opt.head=shows first n paths
 opt.heads=shows first 10 paths
 opt.help=show (this) help
+opt.interactive=start with interactive mode
 opt.list=show simple list
 opt.list-detail=show detail list
 opt.list-lines=show path and its number of counted line list
@@ -54,7 +55,6 @@ opt.quiet=no output
 opt.size=find by size (range)
 opt.slash=always use slash as path separator
 opt.sort=sort by the specified field
-opt.state=start with state-mode on
 opt.tail=shows last n paths
 opt.tails=shows last 10 paths
 opt.text=detect text file (experimental)
