--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -38,6 +38,7 @@ opt.grep=GREP\uff08\u30d5\u30a1\u30a4\u30eb\u884c\u4e00\u81f4\uff09
 opt.head=\u5148\u982d\u306en\u4ef6\u3092\u8868\u793a
 opt.heads=\u5148\u982d\u306e10\u4ef6\u3092\u8868\u793a
 opt.help=\u30d8\u30eb\u30d7\uff08\u3053\u308c\uff09\u3092\u8868\u793a
+opt.interactive=\u5bfe\u8a71\u30e2\u30fc\u30c9\u3092\u8d77\u52d5
 opt.list=\u30b7\u30f3\u30d7\u30eb\u30ea\u30b9\u30c8\u5f62\u5f0f\u3067\u51fa\u529b
 opt.list-detail=\u8a73\u7d30\u30ea\u30b9\u30c8\u5f62\u5f0f\u3067\u51fa\u529b
 opt.list-lines=\u30d1\u30b9\u3068\u30d5\u30a1\u30a4\u30eb\u884c\u6570\u306e\u30ea\u30b9\u30c8\u3092\u51fa\u529b
@@ -48,7 +49,6 @@ opt.quiet=\u51fa\u529b\u3057\u306a\u3044
 opt.size=\u30d5\u30a1\u30a4\u30eb\u30b5\u30a4\u30ba\u3092\u6307\u5b9a\uff08\u7bc4\u56f2\u53ef\uff09
 opt.slash=\u30d1\u30b9\u533a\u5207\u308a\u8868\u793a\u306b\u5e38\u306b\u30b9\u30e9\u30c3\u30b7\u30e5(/)\u3092\u4f7f\u3046
 opt.sort=\u6307\u5b9a\u3057\u305f\u30ad\u30fc\u3067\u30bd\u30fc\u30c8
-opt.state=\u72b6\u614b\u30e2\u30fc\u30c9\u6709\u52b9\u3067\u8d77\u52d5
 opt.tail=\u672b\u5c3e\u306en\u4ef6\u3092\u8868\u793a
 opt.tails=\u672b\u5c3e\u306e10\u4ef6\u3092\u8868\u793a
 opt.text=\u30c6\u30ad\u30b9\u30c8\u30d5\u30a1\u30a4\u30eb\u691c\u51fa (\u5b9f\u9a13\u7684)
