Add 2 new features, save and load into interactive mode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -28,6 +28,9 @@ help.interactive=\
 :print/:p   Print the summary of results\n\
 :sort       Sort the current result and add it first\n\
 \n\
+:load [s]   Load results from file\n\
+:save [s]   Save results to file\n\
+\n\
 :cls        Clear screen\n\
 :help       Show help\n\
 :exit/:quit Quit application
