--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -23,6 +23,9 @@ help.interactive=\
 :print/:p   \u7d50\u679c\u306e\u8981\u7d04\u3092\u8868\u793a\n\
 :sort       \u73fe\u5728\u306e\u7d50\u679c\u3092\u30bd\u30fc\u30c8\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
 \n\
+:load [s]   \u7d50\u679c\u3092\u30d5\u30a1\u30a4\u30eb\u304b\u3089\u8aad\u307f\u8fbc\u307f\n\
+:save [s]   \u7d50\u679c\u3092\u30d5\u30a1\u30a4\u30eb\u3078\u4fdd\u5b58\n\
+\n\
 :cls        \u30b9\u30af\u30ea\u30fc\u30f3\u306e\u30af\u30ea\u30a2\n\
 :help       \u30d8\u30eb\u30d7\u3092\u8868\u793a\n\
 :exit/:quit \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u7d42\u4e86
