Refactor error handling for InteractiveMode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -1,12 +1,17 @@
 .productName=Potaufeu
 
 e.0=error: {0}
-e.noSuchDir=no such directory: {0}
 e.argOptionMustPositiveNumber=the argument for option "{0}" must be a positive integer but "{1}" was given
+e.failedToLoadFile=failed to load file
+e.fileCannotOpen=can't open file ({0})
+e.illegalArgument=invalid argument ({0})
+e.noSuchDir=no such directory: {0}
+e.numberIndexOutOfBounds=the number is out of bounds ({0})
 
 w.0=warning: {0}
 w.duplicatedir=warning: duplicate directory: {0}
 
+i.noSnapshotFiles=no result files found
 i.notFound=not found
 i.showCondition=find with patterns:{0} and options:{1}
 i.startInteractiveMode=\
