--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -1,10 +1,15 @@
 e.0=\u30a8\u30e9\u30fc: {0}
-e.noSuchDir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc [{0}] \u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093
 e.argOptionMustPositiveNumber=\u30aa\u30d7\u30b7\u30e7\u30f3 "{0}" \u306e\u5f15\u6570\u306b\u306f\u6b63\u306e\u6574\u6570\u3092\u6307\u5b9a\u3059\u308b\u5fc5\u8981\u304c\u3042\u308a\u307e\u3059 "{1}" \u304c\u6307\u5b9a\u3055\u308c\u307e\u3057\u305f
+e.failedToLoadFile=\u30d5\u30a1\u30a4\u30eb\u306e\u8aad\u307f\u8fbc\u307f\u306b\u5931\u6557\u3057\u307e\u3057\u305f
+e.fileCannotOpen=\u30d5\u30a1\u30a4\u30eb\u304c\u958b\u3051\u307e\u305b\u3093\uff08{0}\uff09
+e.illegalArgument=\u6b63\u3057\u304f\u306a\u3044\u30d1\u30e9\u30e1\u30fc\u30bf\u30fc\u3067\u3059\uff08{0}\uff09
+e.noSuchDir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc [{0}] \u304c\u898b\u3064\u304b\u308a\u307e\u305b\u3093
+e.numberIndexOutOfBounds=\u7bc4\u56f2\u5916\u306e\u6570\u5024\u3067\u3059\uff08{0}\uff09
 
 w.0=\u8b66\u544a: {0}
 w.duplicatedir=\u8b66\u544a: \u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc[{0}]\u306f\u91cd\u8907\u3057\u3066\u3044\u307e\u3059
 
+i.noSnapshotFiles=\u7d50\u679c\u30d5\u30a1\u30a4\u30eb\u306f\u3042\u308a\u307e\u305b\u3093
 i.notFound=\u898b\u3064\u304b\u308a\u307e\u305b\u3093\u3067\u3057\u305f
 i.showCondition=\u691c\u7d22\u6761\u4ef6: {0}\n\u51e6\u7406\u30aa\u30d7\u30b7\u30e7\u30f3: {1}
 i.startInteractiveMode=\
