Add "opt.dir" into messages_ja.properties

--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -38,6 +38,7 @@ help.interactive=\
 opt.atime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
 opt.ctime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a
 opt.depth=\u6700\u5927\u6df1\u5ea6\u3092\u6307\u5b9a
+opt.dir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc\u3092\u6307\u5b9a
 opt.exclude=\u9664\u5916\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a
 opt.exts=\u62e1\u5f35\u5b50\u30bb\u30c3\u30c8\u3092\u51fa\u529b
 opt.file=\u30d5\u30a1\u30a4\u30eb\u306e\u307f\u691c\u7d22
