--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -35,8 +35,8 @@ help.interactive=\
 :help       \u30d8\u30eb\u30d7\u3092\u8868\u793a\n\
 :exit/:quit \u30a2\u30d7\u30ea\u30b1\u30fc\u30b7\u30e7\u30f3\u3092\u7d42\u4e86
 
-opt.atime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a
-opt.ctime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a
+opt.atime=\u6700\u7d42\u30a2\u30af\u30bb\u30b9\u65e5\u6642\u3092\u6307\u5b9a\uff08\u7bc4\u56f2\u53ef\uff09
+opt.ctime=\u30d5\u30a1\u30a4\u30eb\u4f5c\u6210\u65e5\u6642\u3092\u6307\u5b9a\uff08\u7bc4\u56f2\u53ef\uff09
 opt.depth=\u6700\u5927\u6df1\u5ea6\u3092\u6307\u5b9a
 opt.dir=\u30c7\u30a3\u30ec\u30af\u30c8\u30ea\u30fc\u3092\u6307\u5b9a
 opt.exclude=\u9664\u5916\u30d1\u30bf\u30fc\u30f3\u3092\u6307\u5b9a
