Add a feature "rotate" into interactive mode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -30,6 +30,7 @@ help.interactive=\
 :merge a b  Merge two results\n\
 :pick i     Pick a result and add it first\n\
 :print/:p   Print the summary of results\n\
+:rotate n   Rotate results (+/-)\n\
 :sort       Sort the current result and add it first\n\
 \n\
 :load [s]   Load results from file\n\
