--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -26,6 +26,7 @@ help.interactive=\
 :merge a b  2\u3064\u306e\u7d50\u679c\u3092\u30de\u30fc\u30b8\u3059\u308b\n\
 :pick i     \u7d50\u679c\u3092\u53d6\u308a\u51fa\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
 :print/:p   \u7d50\u679c\u306e\u8981\u7d04\u3092\u8868\u793a\n\
+:rotate n   \u7d50\u679c\u30ea\u30b9\u30c8\u3092\u30ed\u30fc\u30c6\u30fc\u30c8(+/-)\n\
 :sort       \u73fe\u5728\u306e\u7d50\u679c\u3092\u30bd\u30fc\u30c8\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
 \n\
 :load [s]   \u7d50\u679c\u3092\u30d5\u30a1\u30a4\u30eb\u304b\u3089\u8aad\u307f\u8fbc\u307f\n\
