Change the behavior of "drop" to allow negative integer in interactive mode

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -25,7 +25,7 @@ i.verboseEndMessage=matched {0} in {1} files, elapsed time: {2,number,#.##} secs
 help.header=options:
 help.footer=
 help.interactive=\
-:drop n     Drop results from the beginning of this list\n\
+:drop n     Drop results from this list\n\
 :label i s  Label a result by text\n\
 :merge a b  Merge two results\n\
 :pick i     Pick a result and add it first\n\
