--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -21,7 +21,7 @@ i.verboseEndMessage=\u7d42\u4e86. {1} \u4e2d {0} \u30d5\u30a1\u30a4\u30eb\u304c\
 help.header=\u30aa\u30d7\u30b7\u30e7\u30f3:
 help.footer=
 help.interactive=\
-:drop n     \u7d50\u679c\u30ea\u30b9\u30c8\u306e\u5148\u982d\u304b\u3089\u6307\u5b9a\u3057\u305f\u500b\u6570\u3092\u524a\u9664\n\
+:drop n     \u7d50\u679c\u30ea\u30b9\u30c8\u304b\u3089\u6307\u5b9a\u3057\u305f\u500b\u6570\u3092\u524a\u9664\n\
 :label i s  \u7d50\u679c\u306b\u540d\u524d\u3092\u4ed8\u3051\u308b\n\
 :merge a b  2\u3064\u306e\u7d50\u679c\u3092\u30de\u30fc\u30b8\u3059\u308b\n\
 :pick i     \u7d50\u679c\u3092\u53d6\u308a\u51fa\u3057\u3066\u5148\u982d\u306b\u8ffd\u52a0\n\
