--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -15,7 +15,7 @@ i.showCondition=\u691c\u7d22\u6761\u4ef6: {0}\n\u51e6\u7406\u30aa\u30d7\u30b7\u3
 i.startInteractiveMode=\
 \  \u5bfe\u8a71\u30e2\u30fc\u30c9\u3092\u958b\u59cb\u3057\u307e\u3059\u3002\n\
 \  ":help"\u3092\u5165\u529b\u3059\u308b\u3068\u30b3\u30de\u30f3\u30c9\u30ea\u30b9\u30c8\u3092\u8868\u793a\u3057\u307e\u3059\u3002\n
-i.usagePrefix=\u4f7f\u3044\u65b9:
+i.usagePrefix=\u4f7f\u3044\u65b9\uff1a
 i.verboseEndMessage=\u7d42\u4e86. {1} \u4e2d {0} \u30d5\u30a1\u30a4\u30eb\u304c\u4e00\u81f4, \u5b9f\u884c\u6642\u9593 {2,number,#.##} \u79d2
 
 help.header=\u30aa\u30d7\u30b7\u30e7\u30f3:
