Add help messages (#13 New terminal operation: list as TSV)

--- a/src/main/resources/potaufeu/messages.properties
+++ b/src/main/resources/potaufeu/messages.properties
@@ -54,6 +54,7 @@ opt.heads=shows first 10 paths
 opt.help=show (this) help
 opt.interactive=start with interactive mode
 opt.list=show simple list
+opt.list-as-tsv=show full list as TSV
 opt.list-detail=show detail list
 opt.list-lines=show path and its number of counted line list
 opt.list-posix=show POSIX-like list
