--- a/src/main/resources/potaufeu/messages_ja.properties
+++ b/src/main/resources/potaufeu/messages_ja.properties
@@ -50,6 +50,7 @@ opt.heads=\u5148\u982d\u306e10\u4ef6\u3092\u8868\u793a
 opt.help=\u30d8\u30eb\u30d7\uff08\u3053\u308c\uff09\u3092\u8868\u793a
 opt.interactive=\u5bfe\u8a71\u30e2\u30fc\u30c9\u3092\u8d77\u52d5
 opt.list=\u30b7\u30f3\u30d7\u30eb\u30ea\u30b9\u30c8\u5f62\u5f0f\u3067\u51fa\u529b
+opt.list-as-tsv=\u30d5\u30eb\u30ea\u30b9\u30c8\u3092TSV\u5f62\u5f0f\u3067\u51fa\u529b
 opt.list-detail=\u8a73\u7d30\u30ea\u30b9\u30c8\u5f62\u5f0f\u3067\u51fa\u529b
 opt.list-lines=\u30d1\u30b9\u3068\u30d5\u30a1\u30a4\u30eb\u884c\u6570\u306e\u30ea\u30b9\u30c8\u3092\u51fa\u529b
 opt.list-posix=POSIX\u98a8\u30ea\u30b9\u30c8\u5f62\u5f0f\u3067\u51fa\u529b
